--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="formularz">
 <form action="">
-    <h1 style="display: flex; justify-content: center; align-items: center;">Kalkulator BMI</h1>
+    <h1 class="formularz_x1">Kalkulator BMI</h1>
     <label for="age">Podaj wiek:</label>
     <input type="number" id="age" name="age" min="1" step="1" placeholder="lat">
 
@@ -38,6 +38,7 @@
 
     <label for="weight">Podaj wagę:</label>
     <input type="number" id="weight" name="weight" min="1"  step="1" placeholder="kg">
+    
     <div class="buttons">
     <input type="button" value="Oblicz" id="button">
     <input type="reset" value="Reset" id="button">
