--- a/rejestracja.html
+++ b/rejestracja.html
@@ -37,7 +37,7 @@
             <label for="password">Hasło:</label>
             <input type="password" id="password" name="password" min="8"  step="1" placeholder="Podaj Hasło">
 
-            <label for="date">Hasło:</label>
+            <label for="date">Data Urodzenia:</label>
             <input type="date" id="date" name="date" placeholder="Podaj Date Urodzenia">
         
            
