--- a/rejestracja.html
+++ b/rejestracja.html
@@ -10,8 +10,8 @@
     <div class="menu">
         <ul>
             <li><a href="index.html">Kalkulator BMI</a></li>
-            <li><a class="active" href="logowanie.html">Zaloguj się</a></li>
-            <li><a href="rejestracja.html">Zarejestruj się</a></li>
+            <li><a href="logowanie.html">Zaloguj się</a></li>
+            <li><a class="active" href="rejestracja.html">Zarejestruj się</a></li>
           </ul>
 
 
