--- a/rejestracja.html
+++ b/rejestracja.html
@@ -42,7 +42,7 @@
         
            
             <div class="buttons">
-            <input type="button" value="Zaloguj" id="button">
+            <input type="button" value="Zarejestruj się" id="button">
             </div>
         </form>
     </div>
